Release Notes:
===============

Google Search Appliance Connector for Microsoft SharePoint 2003, Microsoft SharePoint 2007 and Microsoft SharePoint 2010

This document contains the release notes for Google Search Appliance Connector for Microsoft SharePoint 2003 and Microsoft SharePoint 2007.
The following sections describe the release in detail and provide information that supplements the main documentation.
See the Issues Tab on the Code Site for the current list of known issues and workarounds.

Web Site: http://code.google.com/p/google-enterprise-connector-sharepoint/issues/list

Release 2.6.0 , 11 June, 2010
=======================================

Introduction
------------
This is an upgrade release with some enhancements and bug fixes. Users of previous releases are encouraged to upgrade.
Users of previous releases should check the "Version Compatibility" section below for instructions on how to use existing data with this new release.

Summary of Changes / New Features
---------------------------------
- Added support for ACL. Connector now sends ACL as document metadata along with each document that it feeds to the GSA. It also keep track of any security changes happening on SharePoint which might affect the ACL of entities, the entities are re-crawled and re-fed to GSA in such cases.
Google Services for SharePoint (GSS) are now shipped with one more service specific to ACL. You need to deploy this web service on SharePoint to get the ACl support.
The support for ACL is turned off by default. Following are the steps to turn this feature on:
1. Go to the connector instance directory of the connector for which you want to turn on ACL.
The connector instance directory can be found under $CATALINA_HOME/webapps/connector-manager/WEB-INF/connectors/sharepoint-connector/CONNECTOR
Replace CONNECTOR with the actual name of your connector
2. Open connectorInstance.xml
3. Scroll down to the end until you find the ACL Related flags
4. Uncomment the following
<!--