@@ -276,11 +276,10 @@
     <checksum file="${downloads.dir}/connector-sharepoint-${version}-src.zip" />
 
     <zip destfile="${downloads.dir}/connector-sharepoint-${version}.zip">
-      <zipfileset dir="." includes="README,RELEASE_NOTES,License/**/*,Scripts" />
-      <zipfileset dir="." includes="COPYING" prefix="/License" />
-       <zipfileset dir="config/config/" includes="logging.properties" fullpath="/config/logging.properties" />
-       <zipfileset dir="${lib.jar.dir}" includes="*.jar" prefix="/lib" />
-      <zipfileset dir="${jar.dir}" includes="connector-sharepoint.jar" fullpath="/connector-sharepoint.jar" />
+      <zipfileset dir="." includes="README,RELEASE_NOTES,License/**/*,Scripts,lib/**/*" excludes="License/dev,lib/dev,License/dev/**/*,lib/dev/**/*"/>
+      <zipfileset dir="." includes="COPYING" prefix="License" />
+      <zipfileset dir="config/config/" includes="logging.properties" fullpath="config/logging.properties" />
+      <zipfileset dir="${jar.dir}" includes="connector-sharepoint.jar" fullpath="connector-sharepoint.jar" />
     </zip>
     <!--<checksum file="${downloads.dir}/connector-sharepoint-${version}.zip" />-->
 
